# portfolio-ai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  pyproject.toml  requirements.txt
.claude/: .fuse_hidden0000016d00000001  .fuse_hidden0003404700000005  settings.json
.claude/agents/: code-reviewer.md
.claude/rules/: code-style.md  frontend-design.md  security.md
app/: config.py  main.py
app/agents/: b3_screener.py  base.py  consolidator.py  crypto_screener.py  deep_research_b3.py  deep_research_crypto.py  macro_analyst.py  pipeline.py  portfolio_balancer.py  reevaluation.py  risk_analyst.py  sector_analyst.py  sentiment_analyst.py  weekly_report.py
app/core/: browser.py  database.py  scheduler.py  selectors.py
app/routers/: contributions.py  portfolio.py  prices.py  reports.py  research.py  scheduler.py  settings.py  ws.py
app/schemas/: asset.py  contribution.py  pipeline.py
app/services/: email_service.py  market_data_service.py  portfolio_service.py  price_service.py  telegram_service.py
app/templates/: lockup_expired.html  pipeline_complete.html  weekly_report.html
frontend/: package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
scripts/: create_user.py  login_claude.py  setup_telegram.py  start.sh  start_backend.sh
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 00001_create_core_tables.sql  00002_create_rls_policies.sql  00003_create_indexes.sql  00004_add_check_constraints.sql  00005_add_missing_indexes.sql  00006_add_ultra_research.sql  (+2 more)
tests/: test_health.py  test_portfolio_service.py  test_price_service.py
(+48 files in other folders)
