[project]
name = "portfolio-ai"
version = "0.1.0"
description = "Investment portfolio management with multi-agent orchestration"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that call external APIs",
    "browser: marks tests that require Playwright browser",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
